added photos to the worksection

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
   <div id="h">
     <div class="logo"><h2>G. van Til</h2></div>
+    <ul class="nav navbar-nav">
+      <li><a class="page-scroll" href="container ptb">Work</a></li>
+      <li><a class="page-scroll" href="container ptb">About me</a></li>
+
 
     <div class="social hidden-xs">
       <a href="#"><i class="ion-android-mail"></i></a>
@@ -53,9 +57,9 @@
             Project Name
           </div>
           <div class="p-body">
-            <ul class="features">
-              <li>SCREENSHOT</li>
-              <li>description</li>
+            <img src="assets/img/dummyweb1.jpeg" class="screenshot" height="100%" width="100%">
+            <ul class="features"> 
+              <li>A website about pianos</br>HTML5, CSS3, jQuery, Node.js and Bootstrap</li>
               <li>link to site</li>
             </ul>
             <a href="#"><i class="ion-social-github"></i></a>
@@ -69,12 +73,12 @@
             Project Name
           </div>
           <div class="p-body">
+            <img src="assets/img/dummyweb2.jpeg" class="screenshot" height="100%" width="100%">
             <ul class="features">
-              <li>SCREENSHOT</li>
-              <li>description</li>
+              <li>A website about Coffee</br>HTML5, CSS3, jQuery, Node.js and Bootstrap</li>
               <li>link to site</li>
             </ul>
-            <a href="#"><i class="ion-social-github"></i></a>
+            <a href="#"><i class="ion-social-github" id="linktogit"></i></a>
           </div><!--/p-body-->
         </div><!--/price-table-->
       </div><!--/col-md-4-->
@@ -85,9 +89,9 @@
             Project Name
           </div>
           <div class="p-body">
+            <img src="assets/img/dummyweb3.jpeg" class="screenshot" height="100%" width="100%">
             <ul class="features">
-              <li>SCREENSHOT</li>
-              <li>description</li>
+              <li>A business website</br>HTML5, CSS3, jQuery, Node.js and Bootstrap</li>
               <li>link to site</li>
             </ul>
             <a href="#"><i class="ion-social-github"></i></a>
@@ -111,7 +115,7 @@
           <b>Values:</b> Eager to learn, Creative, Intelligent, Analytical & Loyal
         </p>
         <p>
-          <b>Skills:</b> Law (Civil Law / Liability Law), HTML5, CSS3, JavaScript. jQuery, Node.js, Module Building, APIs, Bootstrap, LESS, Jade, React.js, Office.</p>
+          <b>Skills:</b>HTML5, CSS3, JavaScript. jQuery, Node.js, Module Building, APIs, Bootstrap, LESS, Jade, React.js, Office.</p>
         </div>
         <div class="col-md-6">
           <img src="assets/img/phone.jpg" class="img-responsive mt" height="55%" width="55%">
@@ -119,16 +123,6 @@
       </div><!--/row-->
     </div><!--/container-->
 
-
-    <div id="f">
-      <div class="container">
-        <div class="row centered">
-          <h2>Contact:</h2>
-          <h3>gijsvantil@gmail.com</h3>
-
-        </div><!--/row-->
-      </div><!--/container-->
-    </div><!--/F-->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
