inserted correct links under contact buttons

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 
     <div class="social hidden-xs">
-      <a href="#"><i class="ion-android-mail"></i></a>
+      <a href="mailto:gijsvantil@gmail.com"><i class="ion-android-mail"></i></a>
       <a href="https://nl.linkedin.com/in/gijsvantil" target="_blank"><i class="ion-social-linkedin"></i></a>
-      <a href="#"><i class="ion-social-github"></i></a>
+      <a href="https://github.com/gijsvantil" target="_blank"><i class="ion-social-github"></i></a>
     </div>
     <div class="container">
       <div class="row">
@@ -54,7 +54,7 @@
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
-            Project Name
+            Piano
           </div>
           <div class="p-body">
             <img src="assets/img/dummyweb1.jpeg" class="screenshot" height="100%" width="100%">
@@ -70,12 +70,12 @@
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
-            Project Name
+            Coffee
           </div>
           <div class="p-body">
             <img src="assets/img/dummyweb2.jpeg" class="screenshot" height="100%" width="100%">
             <ul class="features">
-              <li>A website about Coffee</br>HTML5, CSS3, jQuery, Node.js and Bootstrap</li>
+              <li>A website about coffee</br>HTML5, CSS3, jQuery, Node.js and Bootstrap</li>
               <li>link to site</li>
             </ul>
             <a href="#"><i class="ion-social-github" id="linktogit"></i></a>
@@ -86,7 +86,7 @@
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
-            Project Name
+              Business
           </div>
           <div class="p-body">
             <img src="assets/img/dummyweb3.jpeg" class="screenshot" height="100%" width="100%">
@@ -112,10 +112,13 @@
         </p>
 
         <p>
+          <b>Skills:</b>HTML5, CSS3, JavaScript. jQuery, Node.js, Module Building, APIs, Bootstrap, LESS, Jade, React.js, Office.
+        </p>
+
+        <p>
           <b>Values:</b> Eager to learn, Creative, Intelligent, Analytical & Loyal
         </p>
-        <p>
-          <b>Skills:</b>HTML5, CSS3, JavaScript. jQuery, Node.js, Module Building, APIs, Bootstrap, LESS, Jade, React.js, Office.</p>
+        
         </div>
         <div class="col-md-6">
           <img src="assets/img/phone.jpg" class="img-responsive mt" height="55%" width="55%">
