transferred custom.css to style.css for clearness' sake

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Custom styles for this template -->
   <link href="assets/css/ionicons.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/custom.css" rel="stylesheet">
+  <!-- <link href="assets/css/custom.css" rel="stylesheet"> -->
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
@@ -27,17 +27,21 @@
 <body>
 
   <div id="h">
-    <div class="logo"><h2>G. van Til</h2></div>
-    <ul class="nav navbar-nav">
-      <li><a class="page-scroll" href="container ptb">Work</a></li>
-      <li><a class="page-scroll" href="container ptb">About me</a></li>
+    <div id="header">
+      <div class="logo"><h2>G. van Til</h2></div>
+      <ul class="navbar">
+        <li><a href="container ptb">Work</a></li>
+        <li><a href="container ptb">About me</a></li>
+      </ul>
 
 
-    <div class="social hidden-xs">
-      <a href="mailto:gijsvantil@gmail.com"><i class="ion-android-mail"></i></a>
-      <a href="https://nl.linkedin.com/in/gijsvantil" target="_blank"><i class="ion-social-linkedin"></i></a>
-      <a href="https://github.com/gijsvantil" target="_blank"><i class="ion-social-github"></i></a>
+      <div class="social hidden-xs">
+        <a href="mailto:gijsvantil@gmail.com"><i class="ion-android-mail"></i></a>
+        <a href="https://nl.linkedin.com/in/gijsvantil" target="_blank"><i class="ion-social-linkedin"></i></a>
+        <a href="https://github.com/gijsvantil" target="_blank"><i class="ion-social-github"></i></a>
+      </div>
     </div>
+    
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 centered">
@@ -66,6 +70,8 @@
           </div><!--/p-body-->
         </div><!--/price-table-->
       </div><!--/col-md-4-->
+
+
 
       <div class="col-md-4">
         <div class="price-table">
