added some hover effects for media buttons

--- a/index.html
+++ b/index.html
@@ -27,20 +27,17 @@
 <body>
 
   <div id="h">
-    <div id="header">
-      <div class="logo"><h2>G. van Til</h2></div>
+      <div class="logo"><h1>G. van Til</h1></div>
       <ul class="navbar">
-        <li><a href="container ptb">Work</a></li>
-        <li><a href="container ptb">About me</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#aboutme">About me</a></li>
       </ul>
-
-
       <div class="social hidden-xs">
         <a href="mailto:gijsvantil@gmail.com"><i class="ion-android-mail"></i></a>
         <a href="https://nl.linkedin.com/in/gijsvantil" target="_blank"><i class="ion-social-linkedin"></i></a>
         <a href="https://github.com/gijsvantil" target="_blank"><i class="ion-social-github"></i></a>
       </div>
-    </div>
+    </div><!-- /H -->
     
     <div class="container">
       <div class="row">
@@ -49,11 +46,13 @@
         </div>
       </div><!--/row-->
     </div><!--/container-->
-  </div><!-- /H -->
+
+  
+ 
 
   <div class="container ptb">
     <div class="row centered">
-      <h2 class="mb">Work</h2>
+      <h2 id="work">Work</h2>
 
       <div class="col-md-4">
         <div class="price-table">
@@ -110,7 +109,7 @@
   <div class="container ptb">
     <div class="row">
       <div class="col-md-6">
-        <h2>About me</h2>
+        <h2 id="aboutme">About me</h2>
         <p class="mt">My name is Gijs van Til. I’m a LL.M Graduate currently enrolled in a coding bootcamp by New York Code + Design Academy.</p>
 
         <p>
@@ -131,6 +130,16 @@
         </div>
       </div><!--/row-->
     </div><!--/container-->
+
+    <div id="f">
+      <div class="container">
+        <div class="row centered">
+          <p class="mt">
+            <a href="#"><i class="ion-arrow-up-c"></i></a>
+          </p>
+        </div><!--/row-->
+      </div><!--/container-->
+    </div><!--/F-->
 
 
     <!-- Bootstrap core JavaScript
