--- a/index.html
+++ b/index.html
@@ -20,24 +20,21 @@
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-
-
 </head>
 
 <body>
 
   <div id="h">
       <div class="logo"><h1>G. van Til</h1></div>
-      <ul class="navbar">
-        <li><a href="#work">Work</a></li>
-        <li><a href="#aboutme">About me</a></li>
-      </ul>
+      <div class="menu"><a href="#work"><h2><b>Work</b></h2></div>
+      <div class="menu2"><a href="#aboutme"><h2><b>About</b></h2></div>
+     
       <div class="social hidden-xs">
         <a href="mailto:gijsvantil@gmail.com"><i class="ion-android-mail"></i></a>
         <a href="https://nl.linkedin.com/in/gijsvantil" target="_blank"><i class="ion-social-linkedin"></i></a>
         <a href="https://github.com/gijsvantil" target="_blank"><i class="ion-social-github"></i></a>
       </div>
-    </div><!-- /H -->
+     </div><!-- /H -->
     
     <div class="container">
       <div class="row">
@@ -47,7 +44,7 @@
       </div><!--/row-->
     </div><!--/container-->
 
-  
+ 
  
 
   <div class="container ptb">
