--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
       <a href="https://github.com/gijsvantil" target="_blank"><i class="ion-social-github"></i></a>
     </div>
   </div><!-- /H --> 
+
+<div id="green">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 centered">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="item active">
+                  <img src="assets/img/slider1.jpeg">
+                </div>
+                <div class="item">
+                  <img src="assets/img/slider2.jpeg">
+                </div>
+                <div class="item">
+                  <img src="assets/img/slider3.jpeg">
+                </div>
+              </div>
+            </div><!--/Carousel-->
+
+
 <!-- 
   <div class="photoslider">
     <div><img src="assets/img/slider1.jpeg"></div>
@@ -133,6 +154,7 @@
       </div>
     </div><!--/row-->
   </div><!--/container-->
+
 
   <div id="f">
     <div class="container">
