finished.. for now

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div id="green">
       <div class="container">
-        <div class="row">
+        <div class="rowie">
           <div class="col-md-6 col-md-offset-3 centered">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
               <!-- Wrapper for slides -->
@@ -56,20 +56,6 @@
                 </div>
               </div>
             </div><!--/Carousel-->
-
-
-<!-- 
-  <div class="photoslider">
-    <div><img src="assets/img/slider1.jpeg"></div>
-    <div>your content</div>
-    <div>your content</div>
-  </div> -->
-<!-- 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2 centered">
-        <h2>Welcome to our new app site.<br/>Sign up now & prepare to enjoy our service.</h2>
-      </div> -->
     </div><!--/row-->
   </div><!--/container-->
 
