--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </div>
   </div><!-- /H --> 
 
-<div id="green">
+<!-- <div id="green">
       <div class="container">
         <div class="rowie">
           <div class="col-md-6 col-md-offset-3 centered">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> -->
               <!-- Wrapper for slides -->
-              <div class="carousel-inner">
+           <!--    <div class="carousel-inner">
                 <div class="item active">
                   <img src="assets/img/slider1.jpeg">
                 </div>
@@ -54,7 +54,7 @@
                 <div class="item">
                   <img src="assets/img/slider3.jpeg">
                 </div>
-              </div>
+              </div> -->
             </div><!--/Carousel-->
     </div><!--/row-->
   </div><!--/container-->
